agrego de fotos

--- a/pages/carrers.html
+++ b/pages/carrers.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="nav d-flex justify-content-end gap-3 p-3">
             <a href="#services"><p>Experience</p></a>
-            <a href="#oportunidades"><p>Oportuni</p></a>
+            <a href="#oportunidades"><p>Oportunidades</p></a>
             <a href="/Index.html"><p>Home</p></a>
          </div>
     </nav>
@@ -129,7 +129,7 @@
         </div>
         <div class="col-md-3 mb-4">
           <div class="card">
-            <img src="/assets/Pexels-about.jpeg" class="card-img-top" alt="Experiencia 2">
+            <img src="/assets/pexels-olly-733872.jpg" class="card-img-top" alt="Experiencia 2">
             <div class="card-body">
               <p class="card-text">Trabajar en Innova me ha permitido desarrollar proyectos innovadores utilizando las últimas tecnologías. Cada día es un desafío, pero también una oportunidad para crecer profesionalmente.</p>
             </div>
@@ -145,7 +145,7 @@
         </div>
         <div class="col-md-3 mb-4">
           <div class="card">
-            <img src="/assets/Pexels-about.jpeg" class="card-img-top" alt="Experiencia 4">
+            <img src="/assets/pexels-olly-11780220.jpg" class="card-img-top" alt="Experiencia 4">
             <div class="card-body">
               <p class="card-text">Trabajar en Innova me ha permitido desarrollar proyectos innovadores utilizando las últimas tecnologías. Cada día es un desafío, pero también una oportunidad para crecer profesionalmente.</p>
             </div>
